# domain-criome

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix
docs/: projection-to-cloud.md
schema/: domain-criome.concept.schema  nexus.asschema  nexus.concept.schema  nexus.schema  sema.asschema  sema.concept.schema  sema.schema
src/: client.rs  daemon.rs  daemon_command.rs  frame_io.rs  lib.rs  schema_bridge.rs  schema_daemon.rs
src/schema/: daemon.rs  nexus.rs  sema.rs
tests/: architecture.rs  client.rs  daemon.rs  runtime.rs  store.rs
