[package]
name         = "domain-criome"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
description  = "Criome domain registry, resolver, and projection daemon."
publish      = false

[lib]
name = "domain_criome"
path = "src/lib.rs"

[[bin]]
name = "domain-criome-daemon"
path = "src/bin/domain-criome-daemon.rs"

[[bin]]
name = "domain-criome"
path = "src/bin/domain-criome.rs"

[features]
default   = []
nota-text = ["signal-domain-criome/nota-text", "meta-signal-domain-criome/nota-text"]

[dependencies]
meta-signal-domain-criome = { git = "https://github.com/LiGoldragon/meta-signal-domain-criome.git", branch = "main", features = ["nota-text"] }
nota-next                 = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
rkyv                       = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-domain-criome       = { git = "https://github.com/LiGoldragon/signal-domain-criome.git", branch = "main", features = ["nota-text"] }
signal-frame               = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", features = ["nota-text"] }
thiserror                  = "2"
tokio                      = { version = "1.52", features = ["io-util", "rt-multi-thread", "time"] }
triad-runtime              = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = { level = "warn", priority = -1 }
